<resources>
    <string name="app_name">AniQuiz</string>
    <string name="title_activity_quiz">Quiz</string>
    <string name="title_activity_musquiz">Music Quiz</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="theme_question">Where is this music from?</string>
    <string name="cover_question">What is the title?</string>
    <string name="loading_question">Loading next question…</string>
    <string name="score_counter">Score: %1$d</string>
    <string name="high_score_counter">High score: %1$d</string>
    <string name="btn_submit">Submit</string>
    <string name="btn_finish">Finish</string>
    <string name="btn_next">Next</string>
    <string name="anime_source">Anime source</string>
    <string name="music_source">Music source</string>
    <string name="questions">Questions</string>
    <string name="btn_start">Start</string>
    <string name="new_high_score">New high score!</string>

</resources>