<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_1"
    android:fillViewport="true"
    tools:context=".QuizSetupActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="8dp">

        <androidx.cardview.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="8dp"
            app:cardElevation="0dp"
            card_view:cardBackgroundColor="@color/transparent_black">

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="16dp">

                <TableRow>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="8dp"
                        android:text="@string/anime_source"
                        android:textColor="@color/transparent_white"
                        android:textSize="18sp" />

                    <Space android:layout_weight="1" />

                    <Spinner
                        android:id="@+id/spn_src_type"
                        android:layout_width="140dp"
                        android:layout_height="match_parent"
                        android:popupBackground="@color/transparent_black" />
                </TableRow>

                <TableRow>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="8dp"
                        android:text="@string/music_source"
                        android:textColor="@color/transparent_white"
                        android:textSize="18sp" />

                    <Space android:layout_weight="1" />

                    <Spinner
                        android:id="@+id/spn_src_music"
                        android:layout_width="140dp"
                        android:layout_height="match_parent"
                        android:popupBackground="@color/transparent_black" />
                </TableRow>

                <TableRow android:gravity="center">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="8dp"
                        android:text="@string/questions"
                        android:textColor="@color/transparent_white"
                        android:textSize="18sp" />

                    <Space android:layout_weight="1" />

                    <NumberPicker
                        android:id="@+id/np_question_amt"
                        android:layout_width="match_parent"
                        android:layout_height="60dp" />
                </TableRow>

                <TableRow android:gravity="center">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="8dp"
                        android:text="Time to answer"
                        android:textColor="@color/transparent_white"
                        android:textSize="18sp" />

                    <Space android:layout_weight="1" />

                    <NumberPicker
                        android:id="@+id/np_question_time"
                        android:layout_width="match_parent"
                        android:layout_height="60dp" />
                </TableRow>


                <TableRow android:gravity="center">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="8dp"
                        android:text="Show answer for"
                        android:textColor="@color/transparent_white"
                        android:textSize="18sp" />

                    <Space android:layout_weight="1" />

                    <NumberPicker
                        android:id="@+id/np_answer_time"
                        android:layout_width="match_parent"
                        android:layout_height="60dp" />
                </TableRow>

                <Button
                    android:id="@+id/btn_start_quiz"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:background="@drawable/default_option_border_bg"
                    android:enabled="false"
                    android:text="@string/btn_start"
                    android:textColor="@color/transparent_white"
                    android:textSize="18sp" />

            </TableLayout>
        </androidx.cardview.widget.CardView>
    </LinearLayout>

</ScrollView>